Fixing exec context management
